--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "scripts": {
       "start": "index.html"
+    },
+    "dependencies": {
+      "express": "^4.18.2"
     }
   }
   
